fixing z-index part 2

--- a/single_issuers.css
+++ b/single_issuers.css
@@ -23,6 +23,7 @@
 			background-color: none ;
             overflow: hidden;
             text-align: center;
+            z-index: -1;
 		}
         
         #extramap {
